css timeline view triangle on mobile bug fix - landscape mode

--- a/css/colorThemes/blackTheme.css
+++ b/css/colorThemes/blackTheme.css
@@ -163,6 +163,11 @@
         border-right-color: #222;
     }
 }
+@media screen and (max-width: 1000px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #222;
+    }
+}
 @media screen and (max-width: 767px) {
     .cd-timeline__content::before {
         border-right: 7px solid #222;
