--- a/css/colorThemes/yellowTheme.css
+++ b/css/colorThemes/yellowTheme.css
@@ -163,6 +163,11 @@
         border-right-color: #ffc228;
     }
 }
+@media screen and (max-width: 1000px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #ffc228;
+    }
+}
 @media screen and (max-width: 767px) {
     .cd-timeline__content::before {
         border-right: 7px solid #ffc228;
